syntax="proto3";

package main;

option go_package="/challenge";

service TestApi {
    rpc Echo(TestResponse) returns (TestResponse) {}
    rpc GetUser(UserRequest) returns (UserResponse) {}
}

message TestResponse {
    string msg = 1;
}

message UserRequest {
    string uuid = 1;
}

message UserResponse {
    string name = 1;
    int32 age = 2;
    string email = 3;
}
